--- a/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
@@ -19,13 +19,17 @@ h2, h3, h4, h5, h6 {
     padding-top: 6px;
 }
 
+/* top menu */
 .content .menu li a {
-    text-decoration: none;
-    padding: 8px 10px 5px;
-    font-size: 14px;
+    padding: 8px 0 5px;
+    font-size: 10px;
     font-weight: 600;
     text-transform: uppercase;
-    border-right: 1px solid #242424;
+}
+
+#block-menu-menu-secondary-menu ul {
+    padding: 0;
+    margin: 0;
 }
 
 .messages.error {
