--- a/sites/all/themes/fredtwentytwo/css/screen-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/screen-layout.css
@@ -26,6 +26,19 @@ ul.menu li {
     padding: 0;
 }
 
+.content .menu li a {
+    text-decoration: none;
+    padding: 8px 10px 5px;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-right: 1px solid #242424;
+}
+
+.content .menu li a:hover {
+    /*background: none repeat scroll 0 0 #12AEFF; */
+}
+
 .region-top-advertisement #block-menu-menu-secondary-menu {
     margin-top: 7px;
 }
