--- a/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
@@ -25,11 +25,20 @@ h2, h3, h4, h5, h6 {
     font-size: 10px;
     font-weight: 600;
     text-transform: uppercase;
+    text-decoration: none;
+}
+
+#block-menu-menu-secondary-menu {
+    float: none;
+    display: block;
+    text-align: inherit;
 }
 
 #block-menu-menu-secondary-menu ul {
     padding: 0;
     margin: 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 .messages.error {
