--- a/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
@@ -66,8 +66,8 @@ h2, h3, h4, h5, h6 {
 
 #main-wrapper {
     background: none repeat scroll 0 0 transparent;
-    padding: 10px 10px 0;
-    width: 300px;
+    padding: 10px 0 0;
+    width: 320px;
 }
 
 .region-top-area {
@@ -140,7 +140,7 @@ h2, h3, h4, h5, h6 {
 
 #block-superfish-1 {
     margin-bottom: 0;
-    width: 310px;
+    width: 320px;
     height: 30px
 }
 
@@ -205,7 +205,7 @@ h2, h3, h4, h5, h6 {
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item {
     border: 1px solid #333333;
     height: 305px;
-    width: 298px;
+    width: 320px;
     border-bottom: none;
     overflow: hidden;
 }
@@ -216,7 +216,7 @@ h2, h3, h4, h5, h6 {
     position: absolute;
     top: 250px;
     left: 0;
-    width: 300px;
+    width: 320px;
     z-index: 200;
 }
 
