--- a/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
@@ -207,7 +207,7 @@ h2, h3, h4, h5, h6 {
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item {
-    border: 1px solid #333333;
+    border: none;
     height: 305px;
     width: 320px;
     border-bottom: none;
@@ -343,7 +343,7 @@ h2, h3, h4, h5, h6 {
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item img {
     height: auto;
-    margin-left: -23px;
+    margin-left: 0;
     width: 92px;
 }
 
@@ -372,7 +372,7 @@ h2, h3, h4, h5, h6 {
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image {
-    margin-left: -23px;
+    margin-left: 0;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image .field-content {
@@ -381,7 +381,7 @@ h2, h3, h4, h5, h6 {
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image img {
     height: auto;
-    margin-left: -14px;
+    margin-left: 0;
     width: 381px;
 }
 
@@ -390,7 +390,7 @@ h2, h3, h4, h5, h6 {
 #block-views-most-popular-block {
     float: left;
     margin-right: 0;
-    margin-top: 0px;
+    margin-top: 0;
     padding-bottom: 6px;
     width: 100%;
 }
