--- a/sites/all/themes/fredtwentytwo/css/mobile-landscape-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/mobile-landscape-layout.css
@@ -36,8 +36,8 @@ body.front h1 {
 
 #main-wrapper {
     background: none repeat scroll 0 0 transparent;
-    padding: 10px 10px 0;
-    width: 460px;
+    padding: 10px 0 0;
+    width: 480px;
 }
 
 .sidebar-second #content {
@@ -105,14 +105,14 @@ body.front h1 {
 
 #block-superfish-1 {
     margin-bottom: 0;
-    width: 465px;
+    width: 480px;
     height: 30px
 }
 
 #block-superfish-1 ul {
     margin-bottom: 0;
     margin-right: 0;
-    margin-top: -6px;
+    margin-top: 0;
     padding-left: 0;
 }
 
@@ -126,7 +126,7 @@ body.front h1 {
     margin-top: 0;
     padding: 0;
     text-transform: uppercase;
-    width: 465px;
+    width: 480px;
 }
 
 #block-superfish-1 ul li a {
@@ -174,7 +174,7 @@ body.front h1 {
     color: #FFFFFF;
     position: absolute;
     top: 296px;
-    width: 460px;
+    width: 480px;
     z-index: 200;
 }
 
@@ -282,26 +282,33 @@ body.front h1 {
 .views_slideshow_cycle_main {
     background: none repeat scroll 0 0 #333333;
     height: 520px;
-    width: 460px;
+    width: 480px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom {
     top: 454px;
     left: 50px;
-    width: 400px;
+    width: 480px;
     display: flex;
     justify-content: space-around;
 }
 
+#widget_pager_bottom_home_page-block {
+    width: 470px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 5px;
+}
+
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item img {
     height: auto;
-    margin-left: -23px;
+    margin-left: 0;
     width: 92px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item {
     display: inline-block;
-    margin-right: -3px;
+    margin-right: 0;
     overflow: hidden;
     padding: 5px 4px 14px 5px;
     opacity: 0.4;
@@ -330,7 +337,7 @@ body.front h1 {
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image img {
     height: auto;
     margin-left: 23px;
-    width: 458px;
+    width: 480px;
 }
 
 /*end slideshow style*/
