--- a/sites/all/themes/fredtwentytwo/css/tablet-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/tablet-layout.css
@@ -40,6 +40,20 @@ body.front h1 {
     width: 748px;
 }
 
+#block-superfish-1, #block-superfish-1 ul li {
+    width: 768px;
+}
+
+#block-superfish-1 ul li a {
+    color: #FFFFFF;
+    display: block;
+    font-weight: bold;
+    height: 23px;
+    margin-top: 0;
+    padding: 7px 15px 0 26px;
+    text-decoration: none;
+}
+
 .sidebar-second #content {
     float: none;
     margin-left: 0;
@@ -68,6 +82,15 @@ body.front h1 {
     float: left;
     margin-right: 0;
     margin-top: 39px;
+}
+
+.content .menu li a {
+    text-decoration: none;
+    padding: 8px 10px 5px;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-right: 1px solid #242424;
 }
 
 #block-multiblock-1 {
