--- a/sites/all/themes/fredtwentytwo/css/tablet-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/tablet-layout.css
@@ -191,7 +191,7 @@ body.front h1 {
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item {
     border: 1px solid #333333;
     height: 295px;
-    width: 745px;
+    width: 748px;
     border-bottom: none;
     padding-bottom: 0;
 }
@@ -202,7 +202,7 @@ body.front h1 {
     color: #FFFFFF;
     position: absolute;
     top: 296px;
-    width: 745px;
+    width: 748px;
     z-index: 200;
 }
 
@@ -234,7 +234,7 @@ body.front h1 {
     display: block;
     height: auto;
     overflow: visible;
-    width: 724px;
+    width: 748px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-body-1 {
@@ -242,7 +242,7 @@ body.front h1 {
     display: block;
     padding: 12px;
     text-shadow: 1px 1px 1px #000000;
-    width: 722px;
+    width: 724px;
     z-index: 1;
 }
 
@@ -287,10 +287,10 @@ body.front h1 {
 
 .bottom-shadow {
     background: url("../images/bottom-shadow.png") repeat-x scroll 0 0 transparent;
-    bottom: -6px;
+    bottom: 0;
     height: 6px;
     position: absolute;
-    width: 746px;
+    width: 748px;
     z-index: 9;
     display: block;
 }
@@ -298,7 +298,11 @@ body.front h1 {
 .views_slideshow_cycle_main {
     background: none repeat scroll 0 0 #333333;
     height: 525px;
-    width: 747px;
+    width: 748px;
+}
+
+#widget_pager_bottom_home_page-block {
+    width: 748px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom {
@@ -306,8 +310,8 @@ body.front h1 {
     height: 60px;
     margin-top: 0;
     position: absolute;
-    left: 84px;
-    width: 700px;
+    left: 0;
+    width: 748px;
     z-index: 200;
     top: 464px;
 }
