--- a/sites/all/themes/news_center/css/news_center.css
+++ b/sites/all/themes/news_center/css/news_center.css
@@ -35,19 +35,13 @@ img {
 }
 
 .region-top-area {
-    float: right;
-    margin-right: 12px;
-    margin-bottom: 8px;
-    border: 1px solid #000;
-    height: 105px;
-    background: none repeat scroll 0 0 #fff;
+    margin: 0;
 }
 
 .region-top-area .block {
     float: left;
     margin-bottom: 5px;
     padding: 5px;
-
 }
 
 #content .region {
