--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -72,4 +72,188 @@
         display: block;
     }
 
+    /* SlideShow Block Styles */
+    #block-views-home-page-block {
+        position: relative;
+        margin-bottom: 1em;
+    }
+
+    .image-show {
+        background: none repeat scroll 0 0 #000000;
+        color: #AAAAAA;
+        cursor: default;
+        font-size: 0.8em;
+        opacity: 0.6;
+        padding: 4px 12px 4px 8px;
+        position: absolute;
+        right: 0;
+        top: 7px;
+    }
+
+    #views_slideshow_cycle_main_home_page-block {
+        position: relative;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item {
+        border: none;
+        height: 305px;
+        width: 320px;
+        border-bottom: none;
+        overflow: hidden;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay {
+        background: none repeat-x scroll 0 bottom #333333;
+        color: #FFFFFF;
+        position: absolute;
+        top: 250px;
+        left: 0;
+        width: 320px;
+        z-index: 200;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay a {
+        color: #CCCCCC;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .views-field-field-rate,
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .views-field-comment-count {
+        display: none;
+        visibility: hidden;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title {
+        display: block;
+        z-index: 1;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title h2 {
+        border-bottom: 1px solid #555555;
+        margin-bottom: 7px;
+        margin-left: 10px;
+        margin-right: 10px;
+        padding-bottom: 2px;
+        padding-top: 0;
+        margin-top: 0 !important;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title h2 a {
+        color: #FFFFFF;
+        display: block;
+        height: 97px;
+        overflow: hidden;
+        text-decoration: none;
+        text-shadow: 1px 1px 1px #000000;
+        width: 278px;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-body-1 {
+        clear: both;
+        display: none;
+        padding: 12px;
+        text-shadow: 1px 1px 1px #000000;
+        width: 433px;
+        z-index: 1;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-field-comment-count, #views_slideshow_cycle_main_home_page-block .views-field-created, #views_slideshow_cycle_main_home_page-block .views-field-term-node-tid, #views_slideshow_cycle_main_home_page-block .views-field-name, #views_slideshow_cycle_main_home_page-block .views-field-field-rate {
+        background: url("../images/comment.png") no-repeat scroll 0 0 transparent;
+        display: block;
+        font-size: 0.8em;
+        margin-left: 10px;
+        padding-left: 20px;
+        float: left;
+        margin-right: 10px;
+        margin-bottom: 7px;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-field-field-rate {
+        background: none repeat scroll 0 0 transparent;
+        margin-right: 0;
+        padding-left: 0;
+        width: 158px;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-field-field-rate .views-label {
+        float: left;
+        margin-right: 7px;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-field-created {
+        background: url("../images/date.png") no-repeat scroll 0 0 transparent;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-field-term-node-tid {
+        background: url("../images/tag.png") no-repeat scroll 0 0 transparent;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-field-name {
+        background: url("../images/author.png") no-repeat scroll 0 0 transparent;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame {
+        height: 295px !important;
+    }
+
+    .views_slideshow_cycle_main {
+        background: none repeat scroll 0 0 #333333;
+        height: 490px;
+        width: 320px;
+    }
+
+    .view-id-home_page .views-slideshow-controls-bottom {
+        height: 60px;
+        margin-top: 0;
+        left: 0;
+        width: 320px;
+        z-index: 500;
+        position: absolute;
+        top: 430px;
+        overflow: hidden;
+    }
+
+    .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item img {
+        height: auto;
+        margin-left: 0;
+        width: 73px;
+    }
+
+    .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item {
+        display: inline-block;
+        margin-right: 0;
+        overflow: hidden;
+        padding: 0;
+        opacity: 0.4;
+    }
+
+    .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item.active, .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item:hover {
+        background: none repeat scroll 0 0 #333333;
+        opacity: 1;
+    }
+
+    .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item .views-field-field-image .views-content-field-image {
+        border-right: 1px solid #333333;
+        height: 37px;
+        overflow: hidden;
+        width: 50px;
+    }
+
+    #views_slideshow_pager_field_item_bottom_home_page-block_4 .views-field-field-image .views-content-field-image {
+        width: 51px;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image {
+        margin-left: 0;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image .field-content {
+        margin-top: 0 !important;
+    }
+
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image img {
+        height: auto;
+        margin-left: 0;
+        width: 381px;
+    }
+
 }
