--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -72,7 +72,9 @@
         display: block;
     }
 
+
     /* SlideShow Block */
+
     #block-views-home-page-block {
         margin-bottom: 1em;
     }
@@ -203,7 +205,7 @@
     }
 
     #widget_pager_bottom_home_page-block {
-        width: 470px;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         margin: 0 5px;
