--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -79,7 +79,7 @@
         margin-bottom: 1em;
     }
 
-    #views-home-page .skin-default {
+    .view-home-page .skin-default {
         position: relative;
     }
 
@@ -119,14 +119,14 @@
         margin-bottom: 7px;
         margin-left: 10px;
         margin-right: 10px;
-        padding-bottom: 2px;
+        padding-bottom: 7px;
         padding-top: 0;
         margin-top: 0 !important;
+        line-height: 1.5em;
     }
 
     #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title h2 a {
         color: #FFFFFF;
-        height: 97px;
         text-decoration: none;
         text-shadow: 1px 1px 1px #000000;
     }
